1.18-5.2.1:
- New createbuilding command to create a building
- Fixes in chest generation and lighting updates
- Fixed a potential race conditions with mods using the Lost Cities API

1.18-5.2.0:
- Another optimization on worldgen
- Fixed a problem with connecting walls and glass slabs that got broken in the previous release
- Fixed a bug in the explosion correction code
- Much better explosion damage propagation upwards so that there is less floating geometry
- Code cleanups and small fixes
- New feature where a building can override the palette used by the parts
- Added 3 new building types using that feature with more modern building blocks
- Fixed placement of torches

1.18-5.1.2:
- Much more stable way to generate the Lost City chunks. No more worldgen warnings and tallbuildings profile works again
- MUCH faster way to detect (and delete) floating building parts after being damaged by explosions. It is however slightly less accurate

1.18-5.1.1:
- Fixed a problem with the seed of the custom dimension

1.18-5.1.0:
- Port to 1.18.2

1.18-5.0.4:
- API for registering Lost City dimensions
- Improved placement of wallblocks

1.18-5.0.3:
- Fixed the Lost City dimension. Also added a safety check when trying to teleport to such a dimension (with the bed)

1.18-5.0.2:
- Properly fixed the problem on single player where exiting the world would not reset everything and keep settings for the next created world
- Fixed a problem with the bedrock layer generating at 0 under city buildings

1.18-5.0.1:
- Better at preventing cities where there are villages

1.18-5.0.0:
- First port of Lost Cities to 1.18

1.16-4.0.10-beta:
- Fixed the problem where beds would explode right after teleporting to and from the Lost City dimension

1.16-4.0.9-beta:
- Added back the specialBedBlock config (in lostcities-server.toml) so that you can change the diamond block under the bed