@@ -174,6 +174,9 @@ artifacts {
     archives apiJar
 }
 
+jar {
+  duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
 
 publishing {
     publications.create('mavenJava', MavenPublication) {
