@@ -1,15 +1,17 @@
 package mcjty.lostcities;
 
 import mcjty.lostcities.api.ILostCities;
+import mcjty.lostcities.api.ILostCitiesPre;
 import mcjty.lostcities.setup.ClientSetup;
 import mcjty.lostcities.setup.Config;
 import mcjty.lostcities.setup.ModSetup;
-import mcjty.lostcities.worldgen.lost.*;
 import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.eventbus.api.IEventBus;
 import net.minecraftforge.fml.DistExecutor;
 import net.minecraftforge.fml.ModLoadingContext;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.config.ModConfig;
+import net.minecraftforge.fml.event.lifecycle.FMLConstructModEvent;
 import net.minecraftforge.fml.event.lifecycle.InterModProcessEvent;
 import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
 import net.minecraftforge.fml.loading.FMLPaths;
@@ -43,8 +45,10 @@ public class LostCities {
         ModLoadingContext.get().registerConfig(ModConfig.Type.COMMON, Config.COMMON_CONFIG, "lostcities/common.toml");
         ModLoadingContext.get().registerConfig(ModConfig.Type.SERVER, Config.SERVER_CONFIG);
 
-        FMLJavaModLoadingContext.get().getModEventBus().addListener(setup::init);
-        FMLJavaModLoadingContext.get().getModEventBus().addListener(this::processIMC);
+        IEventBus bus = FMLJavaModLoadingContext.get().getModEventBus();
+        bus.addListener(setup::init);
+        bus.addListener(this::processIMC);
+        bus.addListener(this::onConstructModEvent);
 
         DistExecutor.unsafeRunWhenOn(Dist.CLIENT, () -> () -> {
             FMLJavaModLoadingContext.get().getModEventBus().addListener(ClientSetup::init);
@@ -55,12 +59,19 @@ public class LostCities {
         return logger;
     }
 
+    private void onConstructModEvent(FMLConstructModEvent event) {
+        event.enqueueWork(() -> {
+            event.getIMCStream(ILostCities.GET_LOST_CITIES_PRE::equals).forEach(message -> {
+                Supplier<Function<ILostCitiesPre, Void>> supplier = message.getMessageSupplier();
+                supplier.get().apply(new LostCitiesPreImp());
+            });
+        });
+    }
+
     private void processIMC(final InterModProcessEvent event) {
-        event.getIMCStream().forEach(message -> {
-            if ("getLostCities".equals(message.getMethod())) {
-                Supplier<Function<ILostCities, Void>> supplier = message.getMessageSupplier();
-                supplier.get().apply(new LostCitiesImp());
-            }
+        event.getIMCStream(ILostCities.GET_LOST_CITIES::equals).forEach(message -> {
+            Supplier<Function<ILostCities, Void>> supplier = message.getMessageSupplier();
+            supplier.get().apply(new LostCitiesImp());
         });
     }
 }
