@@ -11,6 +11,8 @@ import net.minecraft.world.level.Level;
 import net.minecraft.world.level.WorldGenLevel;
 
 import javax.annotation.Nullable;
+import java.io.File;
+import java.io.InputStream;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -35,6 +37,16 @@ public class LostCitiesImp implements ILostCities {
     @Override
     public void registerDimension(ResourceKey<Level> key, String profile) {
         Config.registerLostCityDimension(key, profile);
+    }
+
+    @Override
+    public void loadAsset(File file) {
+        AssetRegistries.load(file);
+    }
+
+    @Override
+    public void loadAsset(InputStream input, String path) {
+        AssetRegistries.load(input, path);
     }
 
     public static class LostCityInformation implements ILostCityInformation {
