@@ -1,0 +1,11 @@
+package mcjty.lostcities.api;
+
+/**
+ * The representation of a lost cities profile
+ */
+public interface ILostCityProfile {
+
+    void setDescription(String description);
+
+    void setWorldStyle(String worldStyle);
+}
